pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
