pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: logping

spec:
  rules:
  - http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  pingpong-service
            port:
              number: 80
      - path: /status
        pathType: Prefix
        backend:
          service:
            name:  logoutput-service
            port:
              number: 80
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name:  logoutput-service
            port:
              number: 80
